fix: text block whitespace and image wrap

--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -167,6 +167,37 @@ table td {
   @apply !mb-0;
 }
 
+.wysiwyg img.alignright {
+  float:right;
+  margin:0 0 1em 1em;
+}
+.wysiwyg img.alignleft {
+  float:left;
+  margin:0 1em 1em 0;
+}
+
+.wysiwyg img.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.wysiwyg a img.alignright {
+  float:right;
+  margin:0 0 1em 1em;
+}
+
+.wysiwyg a img.alignleft {
+  float:left;
+  margin:0 1em 1em 0;
+}
+
+.wysiwyg a img.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .yt-lite {
   background-color: #000;
   position: relative;
